all: configure application auto start

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
         "gitlab.gitlab-workflow",
         "gruntfuggly.todo-tree",
         "ms-azuretools.vscode-docker",
+        "nico-castell.linux-desktop-file",
         "redhat.vscode-yaml",
         "samuelcolvin.jinjahtml",
         "timonwong.shellcheck",
