--- a/tasks/system/redhat/fedora/razer.yml
+++ b/tasks/system/redhat/fedora/razer.yml
@@ -5,6 +5,7 @@
     key: "https://download.opensuse.org/repositories/hardware:/razer/Fedora_{{ ansible_distribution_major_version|int }}/repodata/repomd.xml.key"
     fingerprint: "{{ signing_keys.razer_fedora[ansible_distribution_major_version].fingerprint }}"
   register: rpm_key_razer
+  ignore_errors: true
 
 - name: Fedora >=32 - Add Razer repository
   ansible.builtin.yum_repository:
