all: add neofetch as an optional package

--- a/tasks/system/debian/packages.yml
+++ b/tasks/system/debian/packages.yml
@@ -41,6 +41,7 @@
     - dconf-editor
     - exa
     - fd-find
+    - neofetch
   failed_when: false
 
 - name: Debian - Best effort to install remote packages
