centos: fix casing of distribution name

--- a/tasks/system/redhat/docker.yml
+++ b/tasks/system/redhat/docker.yml
@@ -53,7 +53,7 @@
 
 - name: Centos Docker
   ansible.builtin.import_tasks: centos/docker.yml
-  when: ansible_distribution == 'Centos'
+  when: ansible_distribution == 'CentOS'
 
 - name: Fedora Docker
   ansible.builtin.import_tasks: fedora/docker.yml
