--- a/tasks/system/redhat/repositories.yml
+++ b/tasks/system/redhat/repositories.yml
@@ -135,7 +135,7 @@
 
 - name: Centos Repositories
   ansible.builtin.import_tasks: centos/repositories.yml
-  when: ansible_distribution == 'Centos'
+  when: ansible_distribution == 'CentOS'
 
 - name: Fedora Repositories
   ansible.builtin.import_tasks: fedora/repositories.yml
