centos: install vscode

--- a/tasks/system/redhat/centos/docker.yml
+++ b/tasks/system/redhat/centos/docker.yml
@@ -1,5 +1,5 @@
 ---
-- name: Centos - Install docker
+- name: CentOS - Install docker
   ansible.builtin.dnf:
     name: "{{ item }}"
     state: present
