--- a/tasks/system/redhat/centos/repositories.yml
+++ b/tasks/system/redhat/centos/repositories.yml
@@ -1,12 +1,12 @@
 ---
 # https://www.hashicorp.com/security
-- name: Centos - Import Hashicorp signing key
+- name: CentOS - Import Hashicorp signing key
   ansible.builtin.rpm_key:
     state: present
     key: https://rpm.releases.hashicorp.com/gpg
     fingerprint: E8A032E094D8EB4EA189D270DA418C88A3219F7B
 
-- name: Centos - Add Hashicorp repository
+- name: CentOS - Add Hashicorp repository
   ansible.builtin.yum_repository:
     file: hashicorp
     name: hashicorp
@@ -17,13 +17,13 @@
     repo_gpgcheck: true
     gpgkey: https://rpm.releases.hashicorp.com/gpg
 
-- name: Centos - Import RPM-GPG-KEY-rpmfusion-free signing key
+- name: CentOS - Import RPM-GPG-KEY-rpmfusion-free signing key
   ansible.builtin.rpm_key:
     state: present
     key: "{{ signing_keys.rpmfusion_free_el[ansible_distribution_major_version].key }}"
     fingerprint: "{{ signing_keys.rpmfusion_free_el[ansible_distribution_major_version].fingerprint }}"
 
-- name: Centos - Add RPMFusion-free repository
+- name: CentOS - Add RPMFusion-free repository
   ansible.builtin.dnf:
     name:
       - https://download1.rpmfusion.org/free/el/rpmfusion-free-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
@@ -35,13 +35,13 @@
   retries: 5
   delay: 5
 
-- name: Centos - Import RPM-GPG-KEY-rpmfusion-nonfree signing key
+- name: CentOS - Import RPM-GPG-KEY-rpmfusion-nonfree signing key
   ansible.builtin.rpm_key:
     state: present
     key: "{{ signing_keys.rpmfusion_nonfree_el[ansible_distribution_major_version].key }}"
     fingerprint: "{{ signing_keys.rpmfusion_nonfree_el[ansible_distribution_major_version].fingerprint }}"
 
-- name: Centos - Add RPMFusion-nonfree repository
+- name: CentOS - Add RPMFusion-nonfree repository
   ansible.builtin.dnf:
     name:
       - https://download1.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
