centos: fix package install command

--- a/tasks/system/redhat/centos/packages.yml
+++ b/tasks/system/redhat/centos/packages.yml
@@ -1,6 +1,6 @@
 ---
 - name: CentOS - Install packages
-  community.general.pacman:
+  ansible.builtin.dnf:
     name: "{{ item }}"
     state: present
   loop:
