centos: only install rpmfusion repositories when key is known

--- a/tasks/system/redhat/centos/repositories.yml
+++ b/tasks/system/redhat/centos/repositories.yml
@@ -22,14 +22,16 @@
     state: present
     key: "{{ signing_keys.rpmfusion_free_el[ansible_distribution_major_version].key }}"
     fingerprint: "{{ signing_keys.rpmfusion_free_el[ansible_distribution_major_version].fingerprint }}"
+  when: ansible_distribution_major_version in signing_keys.rpmfusion_free_el
 
 - name: CentOS - Add RPMFusion-free repository
   ansible.builtin.dnf:
     name:
       - https://download1.rpmfusion.org/free/el/rpmfusion-free-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
     state: present
-  when: (not rpmfusion_free_repo.stat.exists) or
-        (not rpmfusion_free_updates_repo.stat.exists)
+  when:
+    - ansible_distribution_major_version in signing_keys.rpmfusion_free_el
+    - (not rpmfusion_free_repo.stat.exists) or (not rpmfusion_free_updates_repo.stat.exists)
   register: rpmfusion_free_install
   until: rpmfusion_free_install is succeeded
   retries: 5
@@ -40,14 +42,16 @@
     state: present
     key: "{{ signing_keys.rpmfusion_nonfree_el[ansible_distribution_major_version].key }}"
     fingerprint: "{{ signing_keys.rpmfusion_nonfree_el[ansible_distribution_major_version].fingerprint }}"
+  when: ansible_distribution_major_version in signing_keys.rpmfusion_nonfree_el
 
 - name: CentOS - Add RPMFusion-nonfree repository
   ansible.builtin.dnf:
     name:
       - https://download1.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
     state: present
-  when: (not rpmfusion_nonfree_repo.stat.exists) or
-        (not rpmfusion_nonfree_updates_repo.stat.exists)
+  when:
+    - ansible_distribution_major_version in signing_keys.rpmfusion_nonfree_el
+    - (not rpmfusion_nonfree_repo.stat.exists) or (not rpmfusion_nonfree_updates_repo.stat.exists)
   register: rpmfusion_nonfree_install
   until: rpmfusion_nonfree_install is succeeded
   retries: 5
