--- a/setup.yml
+++ b/setup.yml
@@ -90,6 +90,12 @@
         path: /.dockerenv
       register: file_dockerenv
 
+    # https://www.freedesktop.org/software/systemd/man/sd_booted.html
+    - name: All - Check if systemd is running
+      ansible.builtin.stat:
+        path: /run/systemd/system/
+      register: stat_run_systemd
+
     ### --- System ---
     - name: Repositories
       tags: [system, dev, repo]
