--- a/tasks/system/redhat/centos/repositories.yml
+++ b/tasks/system/redhat/centos/repositories.yml
@@ -62,3 +62,31 @@
   until: rpmfusion_nonfree_install is succeeded
   retries: 5
   delay: 5
+
+- name: CentOS - Install zoom updater dependencies
+  ansible.builtin.dnf:
+    name:
+      - make
+      - coreutils-single  # provides basename
+      - createrepo_c
+      - curl
+      - rpm
+    state: present
+
+- name: CentOS - install zoom updater service
+  community.general.make:
+    chdir: /opt/zoom-yum-repo
+    target: install-service
+  when:
+    - stat_run_systemd.stat.exists
+    - stat_run_systemd.stat.isdir
+
+- name: CentOS - start zoom updater service
+  community.general.make:
+    chdir: /opt/zoom-yum-repo
+    target: start-service
+  when:
+    - stat_run_systemd.stat.exists
+    - stat_run_systemd.stat.isdir
+
+### Version specific repositories
