--- a/setup.yml
+++ b/setup.yml
@@ -74,16 +74,18 @@
       ansible.builtin.debug:
         msg: "{{ ansible_facts }}"
       tags: [never, debug]
-
     - name: debug info - ansible_architecture
       ansible.builtin.debug:
         var: ansible_architecture
+      tags: [never, debug]
     - name: debug info - ansible_distribution
       ansible.builtin.debug:
         var: ansible_distribution
+      tags: [never, debug]
     - name: debug info - ansible_distribution_major_version
       ansible.builtin.debug:
         var: ansible_distribution_major_version
+      tags: [never, debug]
 
     - name: All - Check if dockerenv exists
       ansible.builtin.stat:
