--- a/flatpaks.yml
+++ b/flatpaks.yml
@@ -4,10 +4,11 @@
     ansible_connection: local
     ansible_python_interpreter: "{{ ansible_playbook_python }}"
   tasks:
-    - name: All - Check if dockerenv exists
+    # https://www.freedesktop.org/software/systemd/man/sd_booted.html
+    - name: All - Check if systemd is running
       ansible.builtin.stat:
-        path: /.dockerenv
-      register: file_dockerenv
+        path: /run/systemd/system/
+      register: stat_run_systemd
 
     - name: Flatpaks
       tags: [user]
@@ -17,4 +18,6 @@
       ansible.builtin.systemd:
         daemon_reload: true
         scope: user
-      when: not file_dockerenv.stat.exists
+      when:
+        - stat_run_systemd.stat.exists
+        - stat_run_systemd.stat.isdir
