--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,11 +59,6 @@ workflow:
     - su public --command="./.gitlab/check_versions.bash"
     - su public --command="./.gitlab/verify_no_changes.sh"
 
-# TODO: remove this when changing manjaro
-.setup_archlinux:
-  before_script:
-    - ./.gitlab/setup_archlinux.bash
-
 .setup_debian:
   before_script:
     - ./.gitlab/setup_debian.bash
@@ -187,6 +182,12 @@ build:centos:stream9:
     - .build_img
   script:
     - ./.gitlab/build_image.sh centos stream9
+
+build:manjarolinux:latest:
+  extends:
+    - .build_img
+  script:
+    - ./.gitlab/build_image.sh manjarolinux latest
 
 lint:shellcheck:
   extends:
@@ -336,12 +337,16 @@ test:fedora_rawhide:
   image: fedora:rawhide
   allow_failure: true
 
-test:manjaro:
+test:manjarolinux:
   extends:
-    - .test
-    - .setup_archlinux
+    - .test_new
     - .rules_archlinux
-  image: manjarolinux/base:latest
+  image: ${CI_REGISTRY}/perobertson/scripts/manjarolinux:latest-${CI_COMMIT_REF_SLUG}
+  needs:
+    - job: build:manjarolinux:latest
+      artifacts: false
+    - job: lint:ansible
+      artifacts: false
 
 test:ubuntu_18_04:
   # EOL: 2023-04
