all: lsb is a standard that is no longer being followed

--- a/tasks/system/debian/repositories.yml
+++ b/tasks/system/debian/repositories.yml
@@ -27,7 +27,7 @@
 
 - name: Debian - Add Hashicorp Repo
   ansible.builtin.apt_repository:
-    repo: "deb [arch=amd64 signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com {{ ansible_lsb.codename }} main"
+    repo: "deb [arch=amd64 signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com {{ ansible_distribution_release }} main"
     filename: hashicorp
     state: present
 
